apps/actual-budget/actual-http-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-http-api
  namespace: actual-budget
  labels:
    app: actual-http-api
spec:
  selector:
    app: actual-http-api
  ports:
    - port: 5007
      targetPort: 5007
  type: ClusterIP
