apps/actual-budget/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual-budget
  namespace: actual-budget
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - finance.blackk.dev
      secretName: actual-budget-tls
  rules:
    - host: finance.blackk.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: actual-budget
                port:
                  number: 80
